# image-semantic-search

./: .gitignore  README.md  main.py  pyproject.toml
